// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SecretInput should render a basic component with error: basic with error 1`] = `
<InputGroup>
  <InputGroupItem
    isFill={true}
  >
    <TextInput
      id="id"
      isDisabled={false}
      isRequired={false}
      name="name"
      onChange={[MockFunction]}
      ouiaId="ouia-id"
      placeholder="placeholder"
      type="password"
      validated="error"
    />
  </InputGroupItem>
</InputGroup>
`;

exports[`SecretInput should render a basic component with secret: basic with secret 1`] = `
<InputGroup>
  <InputGroupItem
    isFill={true}
  >
    <TextInput
      id="id"
      isDisabled={true}
      isRequired={false}
      name="name"
      onChange={[MockFunction]}
      ouiaId="ouia-id"
      placeholder="t([
  "secret-input.filled_placeholder"
])"
      type="text"
      validated="default"
    />
  </InputGroupItem>
  <InputGroupItem>
    <Button
      icon={
        <PencilAltIcon
          noDefaultStyle={false}
        />
      }
      onClick={[Function]}
      ouiaId="secret-edit"
      variant="control"
    />
  </InputGroupItem>
</InputGroup>
`;

exports[`SecretInput should render a basic component without secret: basic without secret 1`] = `
<InputGroup>
  <InputGroupItem
    isFill={true}
  >
    <TextInput
      id="id"
      isDisabled={false}
      isRequired={false}
      name="name"
      onChange={[MockFunction]}
      ouiaId="ouia-id"
      placeholder="placeholder"
      type="password"
      validated="default"
    />
  </InputGroupItem>
</InputGroup>
`;

exports[`SecretInput should support editing secret: with secret - edited 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-input-group"
  >
    <div
      class="pf-v6-c-input-group__item pf-m-fill"
    >
      <span
        class="pf-v6-c-form-control"
      >
        <input
          aria-invalid="false"
          data-ouia-component-id="ouia-id"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe="true"
          id="id"
          name="name"
          placeholder="placeholder"
          type="password"
        />
      </span>
    </div>
    <div
      class="pf-v6-c-input-group__item"
    >
      <button
        class="pf-v6-c-button pf-m-control"
        data-ouia-component-id="secret-undo"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            width="1em"
          >
            <svg
              class="pf-v6-icon-default"
              viewBox="0 0 512 512"
            >
              <path
                d="M212.333 224.333H12c-6.627 0-12-5.373-12-12V12C0 5.373 5.373 0 12 0h48c6.627 0 12 5.373 12 12v78.112C117.773 39.279 184.26 7.47 258.175 8.007c136.906.994 246.448 111.623 246.157 248.532C504.041 393.258 393.12 504 256.333 504c-64.089 0-122.496-24.313-166.51-64.215-5.099-4.622-5.334-12.554-.467-17.42l33.967-33.967c4.474-4.474 11.662-4.717 16.401-.525C170.76 415.336 211.58 432 256.333 432c97.268 0 176-78.716 176-176 0-97.267-78.716-176-176-176-58.496 0-110.28 28.476-142.274 72.333h98.274c6.627 0 12 5.373 12 12v48c0 6.627-5.373 12-12 12z"
              />
            </svg>
            <svg
              class="pf-v6-icon-rh-ui"
              viewBox="0 0 32 32"
            >
              <path
                d="M31 20c0 5.514-4.486 10-10 10H6a1 1 0 1 1 0-2h15c4.411 0 8-3.589 8-8s-3.589-8-8-8H4.414l6.293 6.293a.999.999 0 1 1-1.414 1.414l-7.647-7.646c-.283-.283-.439-.66-.439-1.061s.156-.777.439-1.061l7.646-7.646a.999.999 0 1 1 1.414 1.414L4.413 10h16.586c5.514 0 10 4.486 10 10Z"
              />
            </svg>
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
